--- a/about.html
+++ b/about.html
@@ -70,11 +70,11 @@
                 </li>
 
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
 
                 <li>
-                        <li><a class="active" href="page-aboutme.html">About Me</a></li>
+                        <li><a class="active" href="about.html">About Me</a></li>
                 </li>
 
             </ul>
