--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Kousambha Pix | Home</title>
         <!-- Begin Meta Tags -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <meta name="description" content="A Photography Template by CodeSymbol"/>
-        <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography"/>
+        <meta name="description" content="Koushambha Pix is an online portfolio of Koushambha Das"/>
+        <meta name="keywords" content="kousambhapix, koushambha pix, koushambha das, koushambha portfolio, photography"/>
         <meta name="author" content="CodeSymbol"/>
         <!-- End Meta Tags -->
         <link rel="shortcut icon" type="image/png" href="icon.png"/>
