--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Koushambha Pix is an online portfolio of Koushambha Das"/>
     <meta name="keywords" content="kousambhapix, koushambha pix, koushambha das, koushambha portfolio, photography"/>
-    <meta name="author" content="CodeSymbol"/>
+    <meta name="author" content="uiuxarghya"/>
     <!-- End Meta Tags -->
     <link rel="shortcut icon" type="image/png" href="icon.png"/>
     <link rel="icon" href="icon.png" sizes="32x32"/>
