--- a/gallery.html
+++ b/gallery.html
@@ -6,9 +6,9 @@
         <title>Kousambha Pix | Gallery</title>
         <!-- Begin Meta Tags -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <meta name="description" content="A Photography Template by CodeSymbol"/>
-        <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography"/>
-        <meta name="author" content="CodeSymbol"/>
+        <meta name="description" content="Koushambha Pix is an online portfolio of Koushambha Das"/>
+        <meta name="keywords" content="kousambhapix, koushambha pix, koushambha das, koushambha portfolio, photography"/>
+        <meta name="author" content="uiuxarghya"/>
         <!-- End Meta Tags -->
         <link rel="shortcut icon" type="image/png" href="icon.png"/>
         <link rel="icon" href="icon.png" sizes="32x32"/>
