converted images to webp for faster load times

--- a/gallery.html
+++ b/gallery.html
@@ -71,62 +71,62 @@
             <div class="gallery grid three-columns">
                 <div class="wrapper">
                     <figure>
-                        <a href="images/h1.jpg">
-                            <img src="images/gallery/g1.jpg" alt="">
+                        <a href="images/h1.webp">
+                            <img src="images/gallery/g1.webp" alt="">
                         </a>
                         <figcaption>The Sky</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h2.jpg">
-                            <img src="images/gallery/g2.jpg" alt="">
+                        <a href="images/h2.webp">
+                            <img src="images/gallery/g2.webp" alt="">
                         </a>
                         <figcaption>Amazing Cat</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h3.jpg">
-                            <img src="images/gallery/g3.jpg" alt="">
+                        <a href="images/h3.webp">
+                            <img src="images/gallery/g3.webp" alt="">
                         </a>
                         <figcaption>Swastik Sign</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h4.jpg">
-                            <img src="images/gallery/g4.jpg" alt="">
+                        <a href="images/h4.webp">
+                            <img src="images/gallery/g4.webp" alt="">
                         </a>
                         <figcaption>Temple</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h5.jpg">
-                            <img src="images/gallery/g5.jpg" alt="">
+                        <a href="images/h5.webp">
+                            <img src="images/gallery/g5.webp" alt="">
                         </a>
                         <figcaption>Exotic Kebab</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h6.jpg">
-                            <img src="images/gallery/g6.jpg" alt="">
+                        <a href="images/h6.webp">
+                            <img src="images/gallery/g6.webp" alt="">
                         </a>
                         <figcaption>Farmer</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h7.jpg">
-                            <img src="images/gallery/g7.jpg" alt="">
+                        <a href="images/h7.webp">
+                            <img src="images/gallery/g7.webp" alt="">
                         </a>
                         <figcaption>Green Glass</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h8.jpg">
-                            <img src="images/gallery/g8.jpg" alt="">
+                        <a href="images/h8.webp">
+                            <img src="images/gallery/g8.webp" alt="">
                         </a>
                         <figcaption>The lazy Cat</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h9.jpg">
-                            <img src="images/gallery/g9.jpg" alt="">
+                        <a href="images/h9.webp">
+                            <img src="images/gallery/g9.webp" alt="">
                         </a>
                         <figcaption>In the Darkness</figcaption>
                     </figure>
                     <figure>
-                        <a href="images/h10.jpg">
-                            <img src="images/gallery/g10.jpg" alt="">
+                        <a href="images/h10.webp">
+                            <img src="images/gallery/g10.webp" alt="">
                         </a>
                         <figcaption>The Mighty Hand</figcaption>
                     </figure>
