--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="swiper-wrapper">
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h1.jpg" alt="">
+                                <img src="images/h1.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">The Sky</h2>
@@ -83,7 +83,7 @@
                         </article>
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h2.jpg" alt="">
+                                <img src="images/h2.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">Amazing Cat</h2>
@@ -94,7 +94,7 @@
                         </article>
                         <article class="swiper-slide active">
                             <figure>
-                                <img src="images/h3.jpg" alt="">
+                                <img src="images/h3.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">Swastik Sign</h2>
@@ -105,7 +105,7 @@
                         </article>
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h4.jpg" alt="">
+                                <img src="images/h4.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">Temple</h2>
@@ -116,7 +116,7 @@
                         </article>
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h5.jpg" alt="">
+                                <img src="images/h5.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">Exotic Kebab</h2>
@@ -127,7 +127,7 @@
                         </article>
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h6.jpg" alt="">
+                                <img src="images/h6.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">Farmer</h2>
@@ -138,7 +138,7 @@
                         </article>
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h7.jpg" alt="">
+                                <img src="images/h7.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">Green Glass</h2>
@@ -149,7 +149,7 @@
                         </article>
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h8.jpg" alt="">
+                                <img src="images/h8.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">The lazy Cat</h2>
@@ -160,7 +160,7 @@
                         </article>
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h9.jpg" alt="">
+                                <img src="images/h9.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">In the Darkness</h2>
@@ -171,7 +171,7 @@
                         </article>
                         <article class="swiper-slide">
                             <figure>
-                                <img src="images/h10.jpg" alt="">
+                                <img src="images/h10.webp" alt="">
                             </figure>
                             <a href="portfolio-single1.html" class="overlay">
                                 <h2 class="title">The Mighty Hand</h2>
