added search console id

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US" class="fullscreen">
     <!-- Begin Head -->
     <head>
+        <meta name="google-site-verification" content="aRFl4Ww-EjZoLYfCzaMhDzOORpiDjX40I6TRTCgKIk4" />
         <meta charset="utf-8">
         <title>Kousambha Pix | Home</title>
         <!-- Begin Meta Tags -->
