changed name from kousambha to koushambha

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
     <!-- Begin Head -->
     <head>
         <meta charset="utf-8">
-        <title>Kousambha Pix | Gallery</title>
+        <title>Koushambha Pix | Gallery</title>
         <!-- Begin Meta Tags -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="Koushambha Pix is an online portfolio of Koushambha Das"/>
