--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta name="google-site-verification" content="aRFl4Ww-EjZoLYfCzaMhDzOORpiDjX40I6TRTCgKIk4" />
         <meta charset="utf-8">
-        <title>Kousambha Pix | Home</title>
+        <title>Koushambha Pix | Home</title>
         <!-- Begin Meta Tags -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="Koushambha Pix is an online portfolio of Koushambha Das"/>
