--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Kousambha Pix | About Me</title>
+    <title>Koushambha Pix | About Me</title>
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
