--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en-US" class="fullscreen">
 
 <!-- Begin Head -->
+
 <head>
 
     <meta charset="utf-8">
@@ -9,12 +10,12 @@
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Koushambha Pix is an online portfolio of Koushambha Das"/>
-    <meta name="keywords" content="kousambhapix, koushambha pix, koushambha das, koushambha portfolio, photography"/>
-    <meta name="author" content="uiuxarghya"/>
+    <meta name="description" content="Koushambha Pix is an online portfolio of Koushambha Das" />
+    <meta name="keywords" content="kousambhapix, koushambha pix, koushambha das, koushambha portfolio, photography" />
+    <meta name="author" content="uiuxarghya" />
     <!-- End Meta Tags -->
-    <link rel="shortcut icon" type="image/png" href="icon.png"/>
-    <link rel="icon" href="icon.png" sizes="32x32"/>
+    <link rel="shortcut icon" type="image/png" href="icon.png" />
+    <link rel="icon" href="icon.png" sizes="32x32" />
     <!-- Begin Stylesheets -->
     <link type="text/css" rel="stylesheet" href="css/reset.css">
     <link type="text/css" rel="stylesheet" href="includes/fontawesome/icons.css">
@@ -32,6 +33,7 @@
 
 
 <!-- Begin Body -->
+
 <body class="fullscreen">
 
 
@@ -74,7 +76,7 @@
                 </li>
 
                 <li>
-                        <li><a class="active" href="about.html">About Me</a></li>
+                <li><a class="active" href="about.html">About Me</a></li>
                 </li>
 
             </ul>
@@ -88,7 +90,7 @@
     <main class="page page-about-me has-background" style="background-image:url('images/about1.jpg');">
         <div class="wrapper">
 
-            <div class="tablet-mobile-image-container">
+            <div class="tablet-mobile-image-container" align="center">
                 <img class="tablet-mobile-image" src="images/about/koushambha-das.jpg" alt="my pic">
             </div>
 
@@ -124,14 +126,18 @@
                     <span class="divider40"></span>
                     <p>Hello,</p>
                     <p>Welcome to <strong>Koushambha Pix.</strong></br>
-                    My name is <a href="https://www.instagram.com/koushambha">Koushambha Das</a> .</br>
-                    I am a self-made and passionate photographer specializing in product, food , beverage, and portrait
-                    I equally comfortable working in his own home as on is on location.</br>
-                    I love to capture almost everything that I found near me.</p>
+                        My name is <a href="https://www.instagram.com/koushambha">Koushambha Das</a> .</br>
+                        I am a self-made and passionate photographer specializing in product, food , beverage, and
+                        portrait
+                        I equally comfortable working in his own home as on is on location.</br>
+                        I love to capture almost everything that I found near me.</p>
 
-                    <p>Thanks to <a href="https://www.instagram.com/arghyaghosh997">Arghya Ghosh</a> aka <a href="https://uiuxarghya.github.io">@uiuxarghya</a> for helping me to develop this site.</p>
-
-
+                    <p>Thanks to <a href="https://www.instagram.com/arghyaghosh997">Arghya Ghosh</a> aka <a
+                            href="https://uiuxarghya.github.io">@uiuxarghya</a> for helping me to develop this site.</p>
+                    <br />
+                    <div align="center">
+                        <img height="100px" width="400px" src="images/collab.svg" />
+                    </div>
 
                     <div class="column one-half phone-number">
                         <address>
@@ -158,24 +164,25 @@
     <!-- End Main -->
 
     <!-- Begin Footer -->
-        <footer>
-            <div class="copyrights">
-                <p>
-                    © KOUSAMBHA.PIX 2021 | Made with ❤️ by <a href="https://github.com/uiuxarghya" target="_blank">uiuxarghya</a>
-                    .
-                </p>
-            </div>
-            <div class="social-links icons">
-                <ul>
-                    <li>
-                        <a href="https://www.facebook.com/koushambha/" class="icons-facebook"></a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/koushambha/" class="icons-instagram"></a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
+    <footer>
+        <div class="copyrights">
+            <p>
+                © 2021 KOUSHAMBHA.PIX | Designed 🎨 and Coded 💻 by <a href="https://github.com/uiuxarghya"
+                    target="_blank">uiuxarghya</a>
+                .
+            </p>
+        </div>
+        <div class="social-links icons">
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com/koushambha/" class="icons-facebook"></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/koushambha/" class="icons-instagram"></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <!-- End Footer -->
 
 
