--- a/gallery.html
+++ b/gallery.html
@@ -138,7 +138,7 @@
         <footer>
             <div class="copyrights">
                 <p>
-                    © KOUSAMBHA.PIX 2021 | Made with ❤️ by <a href="https://github.com/uiuxarghya" target="_blank">uiuxarghya</a>
+                    © 2021 KOUSHAMBHA.PIX | Designed 🎨 and Coded 💻 by <a href="https://github.com/uiuxarghya" target="_blank">uiuxarghya</a>
                     .
                 </p>
             </div>
